hphp/test/zend/bad/ext/standard/tests/file/file_get_contents_error002.php
<?php
	var_dump(file_get_contents("http://checkip.dyndns.com",null,null,0,-1));
?>
